# Fire_detetor

./: README.md
code/: CMakeCache.txt  CMakeLists.txt  VIPL_class.hpp  main.cpp  yolo_v2_class.hpp
code/QT_UI/: vipl_detector.cpp  vipl_detector.h  vipl_detector.ui
